--- a/index.html
+++ b/index.html
@@ -3,65 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WildSteam™ | Off-Grid Saunas</title>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <title>WildSteam™ – Off-Grid. On Point.</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: 'Work Sans', sans-serif;
-      background-color: #f3efe9;
-      color: #2f2f2f;
-      line-height: 1.6;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f8f1e5;
+      color: #2e2b28;
     }
     header {
-      background: url('https://images.unsplash.com/photo-1565372396400-26ac2701f2e2?auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
-      padding: 6rem 2rem;
+      background-image: url('your-poster-image.jpg'); /* Replace with actual image URL */
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      color: white;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.4);
+      color: #fff;
     }
     header h1 {
-      margin: 0;
-      font-size: 3rem;
-      letter-spacing: 1px;
+      font-family: 'Playfair Display', serif;
+      font-size: 4rem;
     }
     header p {
-      font-style: italic;
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
+      font-size: 1.25rem;
+      margin: 1rem 0;
     }
-    .section {
-      padding: 3rem 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    .section h2, .section h3 {
-      color: #476254;
-    }
-    .cta {
-      text-align: center;
-      margin-top: 2rem;
-    }
-    .cta a {
-      background-color: #476254;
+    .btn {
+      background-color: #2e2b28;
       color: #fff;
-      padding: 0.9rem 1.8rem;
+      padding: 0.75rem 1.5rem;
+      margin: 0.5rem;
       text-decoration: none;
-      border-radius: 6px;
-      font-weight: 600;
-      transition: background 0.3s ease;
+      border-radius: 4px;
     }
-    .cta a:hover {
-      background-color: #354d3e;
+    section {
+      padding: 4rem 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+    .two-col {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+    }
+    .two-col img {
+      flex: 1 1 45%;
+      max-width: 100%;
+      height: auto;
+    }
+    .two-col .text {
+      flex: 1 1 45%;
     }
     footer {
+      background-color: #2e2b28;
+      color: #fff;
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-    a {
-      color: #476254;
+      padding: 2rem;
     }
   </style>
 </head>
@@ -69,36 +74,37 @@
   <header>
     <h1>WildSteam™</h1>
     <p>Steam Anywhere. Roam Wild.</p>
+    <a href="#book" class="btn">Book a Session</a>
+    <a href="#host" class="btn">Become a Host</a>
   </header>
 
-  <div class="section">
-    <h2>Off-Grid Wood-Fired Saunas</h2>
-    <p>
-      Welcome to the next evolution of wellness. WildSteam™ installs off-grid, wood-fired saunas in nature-rich environments—designed for rest, rooted in ritual.
-    </p>
-
-    <h3>Inspired by the Mountains. Powered by the Forest.</h3>
-    <p>
-      Imagine the stillness of a Japanese onsen, paired with the rugged heart of a Patagonia basecamp. WildSteam saunas are built with natural materials, minimalist lines, and old-world heat.
-    </p>
-
-    <div class="cta">
-      <a href="mailto:hello@wildsteam.co.uk">Partner With Us</a>
+  <section id="about">
+    <div class="two-col">
+      <img src="your-image.jpg" alt="WildSteam sauna" />
+      <div class="text">
+        <h2>This isn’t wellness. This is ritual.</h2>
+        <ul>
+          <li>No gym smell. No phones.</li>
+          <li>Just smoke, wood, and silence.</li>
+          <li>Bookable outdoor saunas across wild UK landscapes.</li>
+          <li>Hot. Honest. Holy.</li>
+        </ul>
+      </div>
     </div>
-  </div>
+  </section>
 
-  <div class="section">
-    <h3>Follow the Journey</h3>
+  <section id="host">
+    <h2>Got Land? Let It Steam.</h2>
     <p>
-      We’re scouting new locations, hand-building every unit, and launching soon. Follow our story:
+      We build. You earn. Host a WildSteam unit on your property and earn up to £1,500/month.
+      Simple, rustic, and completely off-grid.
     </p>
-    <p>
-      <strong>Instagram:</strong> <a href="https://instagram.com/wildsteam.uk" target="_blank">@wildsteam.uk</a>
-    </p>
-  </div>
+    <a href="#" class="btn">Apply to Host</a>
+  </section>
 
   <footer>
-    © 2025 WildSteam Ltd. All rights reserved.
+    <p>© WildSteam™ | Steam Anywhere. Roam Wild.</p>
+    <p>Instagram | Email | Privacy</p>
   </footer>
 </body>
 </html>
