--- a/index.html
+++ b/index.html
@@ -6,18 +6,11 @@
   <title>WildSteam™ – Off-Grid. On Point.</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f8f1e5;
-      color: #2e2b28;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Roboto', sans-serif; background-color: #f8f1e5; color: #2e2b28; }
+
     header {
-      background-image: url('your-poster-image.jpg'); /* Replace with actual image URL */
+      background-image: url('sunset.webp');
       background-size: cover;
       background-position: center;
       height: 100vh;
@@ -28,14 +21,19 @@
       text-align: center;
       color: #fff;
     }
+
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 4rem;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
     }
+
     header p {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
       margin: 1rem 0;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
     }
+
     .btn {
       background-color: #2e2b28;
       color: #fff;
@@ -43,25 +41,42 @@
       margin: 0.5rem;
       text-decoration: none;
       border-radius: 4px;
+      font-weight: bold;
     }
+
     section {
-      padding: 4rem 2rem;
-      max-width: 1000px;
-      margin: 0 auto;
+      padding: 5rem 2rem;
+      text-align: center;
+      background-size: cover;
+      background-position: center;
+      color: #fff;
     }
-    .two-col {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
+
+    #about {
+      background-image: url('forest.webp');
     }
-    .two-col img {
-      flex: 1 1 45%;
-      max-width: 100%;
-      height: auto;
+
+    #host {
+      background-image: url('merch.webp');
     }
-    .two-col .text {
-      flex: 1 1 45%;
+
+    #brand {
+      background-image: url('name.webp');
     }
+
+    section h2 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+    }
+
+    section p, ul {
+      font-size: 1.25rem;
+      max-width: 800px;
+      margin: 0 auto 2rem;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+    }
+
     footer {
       background-color: #2e2b28;
       color: #fff;
@@ -73,37 +88,40 @@
 <body>
   <header>
     <h1>WildSteam™</h1>
-    <p>Steam Anywhere. Roam Wild.</p>
-    <a href="#book" class="btn">Book a Session</a>
-    <a href="#host" class="btn">Become a Host</a>
+    <p>Still heat. Slow breath. Deep nature.</p>
+    <a href="#about" class="btn">The WildSteam Experience</a>
+    <a href="#host" class="btn">Host With Us</a>
   </header>
 
   <section id="about">
-    <div class="two-col">
-      <img src="your-image.jpg" alt="WildSteam sauna" />
-      <div class="text">
-        <h2>This isn’t wellness. This is ritual.</h2>
-        <ul>
-          <li>No gym smell. No phones.</li>
-          <li>Just smoke, wood, and silence.</li>
-          <li>Bookable outdoor saunas across wild UK landscapes.</li>
-          <li>Hot. Honest. Holy.</li>
-        </ul>
-      </div>
-    </div>
+    <h2>A return to what matters.</h2>
+    <ul>
+      <li>No screens. No distractions.</li>
+      <li>Just fire, water, and the quiet of the wild.</li>
+      <li>Saunas nestled in the land, not laid over it.</li>
+      <li>Unplug, slow down, and come back to your body.</li>
+    </ul>
   </section>
 
   <section id="host">
-    <h2>Got Land? Let It Steam.</h2>
+    <h2>Share your land. Share the stillness.</h2>
     <p>
-      We build. You earn. Host a WildSteam unit on your property and earn up to £1,500/month.
-      Simple, rustic, and completely off-grid.
+      Do you have a meadow, woodland, or wild edge? We build minimal, off-grid saunas that blend with the landscape.
+      You host. You earn. And you offer something rare.
     </p>
-    <a href="#" class="btn">Apply to Host</a>
+    <a href="#" class="btn">Become a Host</a>
+  </section>
+
+  <section id="brand">
+    <h2>The name says everything.</h2>
+    <p>
+      WildSteam™ is a philosophy as much as a name. Rooted in ritual, reverent to nature. 
+      It's heat, stillness, and a sense of place.
+    </p>
   </section>
 
   <footer>
-    <p>© WildSteam™ | Steam Anywhere. Roam Wild.</p>
+    <p>© WildSteam™ | Still Heat. Roam Wild.</p>
     <p>Instagram | Email | Privacy</p>
   </footer>
 </body>
